Sections in the body added.

--- a/About Me.html
+++ b/About Me.html
@@ -25,11 +25,20 @@
         </div>
 
         <div class="Body-Section">
-            <div heading>
-                <h5>About Me</h5>
+            <div class="title">
+                <div class="horizontal-line">
+                    <hr>
+                </div>
+                <div class="about-me">
+                    <h5>About Me</h5>
+                </div>
             </div>
+            
             <div Class="body-section1">
                 <div class="Image">
+                    <div>
+                        <img src="rili">
+                    </div>
 
                 </div>
                 <div class="about-me-paragraph">
