--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Rilinde|Home</title>
+    <title>Rilinde | Home</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-----The navigation bar------ -->
@@ -18,7 +19,7 @@
                         <li><a href="#Home">Home</a></li>
                         <li><a href="#Projects">Projects</a></li>
                         <li><a href="#Skills">Skills</a></li>
-                        <li><a href="#Experience"></a>Experience</li>
+                        <li><a href="#Experience">Experience</a></li>
                         <li><a href="#About Me">About</a></li>
                         <li><a href="#Contact">Contact</a></li>
                     </ul>
@@ -26,6 +27,27 @@
             </div>
         </div>
     </div>
+
+    <!----------------------- Body Section --------------------------------------------->
+    <div class="body-section">
+        <div class="hello">
+            <p>Hello</p>
+        </div>
+        <div class="image">
+            <img>
+
+        </div>
+        <div class="paragraph">
+            <h1>I’M RILINDE NTSIENI</h1>
+            <p></p>
+
+
+        </div>
+        <div class="icons"></div>
+
+    </div>
+
+
 
     
 </body>
