--- a/About Me.html
+++ b/About Me.html
@@ -37,7 +37,7 @@
             <div Class="body-section1">
                 <div class="Image">
                     <div>
-                        <img src="rili">
+                        <img src="rilinde-ntsieni image.jpg" alt="rilinde-ntsieni image">
                     </div>
 
                 </div>
@@ -61,9 +61,6 @@
 
                 </div>
     
-
-            </div>
-            <div class="body-section2">
 
             </div>
 
