--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
 
     <!----------------------- Body Section --------------------------------------------->
     <div class="body-section">
-        <div class="hello">
-            <p>Hello</p>
+        <div class="title">
+            <div class="horizontal-line">
+                <hr>
+            </div>
+            <div class="about-me">
+                <h5>Hello</h5>
+            </div>
         </div>
         <div class="image">
             <img>
