changes made to the code.

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     </footer>
 
 
-    <div class="social-icons">
+    <!-- <div class="social-icons">
         <a href=""><i class="devicon-github-original"></i></a>
         <a href=""><i class="devicon-linkedin-plain"></i></a>
         <a href=""><i class="devicon-facebook-plain"></i></a>
-    </div>
+    </div> -->
 </body>
 </html>
