Linked the pages

--- a/About Me.html
+++ b/About Me.html
@@ -34,15 +34,15 @@
 
       <nav class="navigation-bar">
         <div class="logo">
-          <a href="">Rilinde</a>
+          <a href="index.html">Rilinde</a>
         </div>
         <ul class="nav-items">
-          <li><a href="#Home">Home</a></li>
-          <li><a href="#Projects">Projects</a></li>
-          <li><a href="#Skills">Skills</a></li>
-          <li><a href="#Experience">Experience</a></li>
-          <li><a href="#About Me">About</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="project.html">Projects</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="About Me.html">About</a></li>
+          <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
 
@@ -95,7 +95,7 @@
         <h1>Quick Links</h1>
         <ul class="footer-ls">
           <li>
-            <a href="">
+            <a href="index.css">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
@@ -103,7 +103,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="project.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
@@ -111,7 +111,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="skills.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
@@ -119,7 +119,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="About Me.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
@@ -127,7 +127,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="Contact.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
