--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <div class="welcome">
             <nav class="navigation-bar">
                 <div class="logo">
-                    <a href="">Rilinde</a>
+                    <a href="index.html">Rilinde</a>
                 </div>
                 <ul class="nav-items">
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#Projects">Projects</a></li>
-                    <li><a href="#Skills">Skills</a></li>
-                    <li><a href="#Experience">Experience</a></li>
-                    <li><a href="#About Me">About</a></li>
-                    <li><a href="#Contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="skills.html">Skills</a></li>
+                    <li><a href="experience.html">Experience</a></li>
+                    <li><a href="About Me.html">About</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
     
@@ -67,31 +67,31 @@
         <section class="section-2">
             <h1>Quick Links</h1>
             <ul class="footer-ls">
-                <li><a href=""> <span class="material-symbols-outlined">
+                <li><a href="index.html"> <span class="material-symbols-outlined">
                     <span class="material-symbols-outlined">
                         chevron_right
                         </span>
                     </span> <p>Home</p></a>
                 </li>
-                <li><a href=""> <span class="material-symbols-outlined">
+                <li><a href="project.html"> <span class="material-symbols-outlined">
                     <span class="material-symbols-outlined">
                         chevron_right
                         </span>
                         </span> <p>Projects</p></a>
                 </li>
-                <li><a href=""> <span class="material-symbols-outlined">
+                <li><a href="skills.html"> <span class="material-symbols-outlined">
                     <span class="material-symbols-outlined">
                         chevron_right
                         </span>
                     </span> <p>Skills</p></a>
                 </li>
-                <li><a href=""> <span class="material-symbols-outlined">
+                <li><a href="About Me.html"> <span class="material-symbols-outlined">
                     <span class="material-symbols-outlined">
                         chevron_right
                         </span>
                     </span> <p>About Me</p></a>
                 </li>
-                <li><a href=""> <span class="material-symbols-outlined">
+                <li><a href="Contact.html"> <span class="material-symbols-outlined">
                     <span class="material-symbols-outlined">
                         chevron_right
                         </span>
@@ -107,10 +107,10 @@
                     </span> <p>+27 79 615 5623</p></a></li>
                 <li> <a href=""><span class="material-symbols-outlined">
                     mail
-                    </span> <p>email</p></a></li>
+                    </span> <p>rilindentsieni@gmail.com</p></a></li>
                 <li> <a href=""><span class="material-symbols-outlined">
                     location_on
-                    </span> <p>location</p></a> </li>
+                    </span> <p>Midrand, Noordwyk</p></a> </li>
             </ul>
         </section>
     </footer>
