--- a/project.html
+++ b/project.html
@@ -35,15 +35,15 @@
       <div class="welcome">
         <nav class="navigation-bar">
           <div class="logo">
-            <a href="">Rilinde</a>
+            <a href="index.html">Rilinde</a>
           </div>
           <ul class="nav-items">
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#Projects">Projects</a></li>
-            <li><a href="#Skills">Skills</a></li>
-            <li><a href="#Experience">Experience</a></li>
-            <li><a href="#About Me">About</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="About Me.html">About</a></li>
+            <li><a href="Contact.html">Contact</a></li>
           </ul>
         </nav>
 
@@ -99,7 +99,7 @@
         <h1>Quick Links</h1>
         <ul class="footer-ls">
           <li>
-            <a href="">
+            <a href="index.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
@@ -107,7 +107,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="project.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
@@ -115,7 +115,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="skills.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
@@ -123,7 +123,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="About Me.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
@@ -131,7 +131,7 @@
             >
           </li>
           <li>
-            <a href="">
+            <a href="Contact.html">
               <span class="material-symbols-outlined">
                 <span class="material-symbols-outlined"> chevron_right </span>
               </span>
