--- a/project.html
+++ b/project.html
@@ -54,31 +54,32 @@
           </div>
           <div class="cards">
             <div class="card">
-                <h1>Heading</h1>
-                <p class="descr">Description</p>
+                <h1>Cozy Creation</h1>
+                <p class="descr">eCommerce website specializing<br> in buying and selling.</p>
                 <div class="stack">
                     <p>HTML</p>
                     <p>CSS</p>
+                </div>
+                <img src="project 1.png" alt="" srcset="">
+            </div>
+            <div class="card">
+                <h1>Life as it Goes</h1>
+                <p class="descr">Investmen website.</p>
+                <div class="stack">
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>JAVASCRIPT</p>
                 </div>
                 <img src="My Logo 4.png" alt="" srcset="">
             </div>
             <div class="card">
-                <h1>Heading</h1>
-                <p class="descr">Description</p>
+                <h1>Portfolio Website</h1>
+                <p class="descr">Online CV/Resume</p>
                 <div class="stack">
                     <p>HTML</p>
                     <p>CSS</p>
                 </div>
-                <img src="My Logo 4.png" alt="" srcset="">
-            </div>
-            <div class="card">
-                <h1>Heading</h1>
-                <p class="descr">Description</p>
-                <div class="stack">
-                    <p>HTML</p>
-                    <p>CSS</p>
-                </div>
-                <img src="My Logo 4.png" alt="" srcset="">
+                <img src="project 3.png" alt="" srcset="">
             </div>
           </div>
         </div>
