--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
             <div class="home-content-experience ">
                 <div class="welcome-text">
                     <hr>
-                    <h2>Experience</h2>
+                    <h2>Education and Experience</h2>
                 </div>
 
                 <div class="cards">
