edited the form code, input text to textarea.

--- a/Contact.html
+++ b/Contact.html
@@ -50,7 +50,7 @@
                             <input type="text" id="fname" name="fname" placeholder="Name:"><br>
                             <input type="email" id="email" name="email" placeholder="Email:"><br>
                             <input type="number" id="contact" name="contact" placeholder="Phone:"><br>
-                            <input type="text" id="message" name="message" placeholder="Message:"><br>
+                            <textarea name="" id="" cols="30" row="10" placeholder="Write Message Here" required></textarea>
                         </form>
             
                        
