adding an text animation.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
     
                 <div class="title-container">
                     <div class="title-text">
-                        <h1>I'M RILINDE NTSIENI</h1>
+                        <div class="txt-content">
+                            <div class="normal-txt">I am</div>
+                            <div class="change-txt">Software Developer</div>
+                        </div>
+                        
                         <p>Applied Statistics and Informatics graduate currently  doing software development learnership at GirlCode.</p>
                     </div>
                     <img src="rilinde-ntsieni image.jpg" class="home-img" alt="My Picture" srcset="">
