--- a/About Me.html
+++ b/About Me.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <main class="main-container">
-      <!--------------- This is the navigation Section------------>
+      <!--------------- Navigation Section------------>
 
       <nav class="navigation-bar">
         <div class="logo">
