Added a section to the page( get in touch)

--- a/index.html
+++ b/index.html
@@ -63,8 +63,16 @@
                 </div>
     
                 <div class="home-buttons">
-                    <button class="hire">Hire Me</button>
                     <button class="download">Download CV</button>
+                </div>
+
+                <div class="get-intouch">
+                    <h1 class="home__title">Have a project in mind?</h1>
+                    <p class="home__subtitle">
+                        Share your vision and let's turn them into reality together.
+                    </p>
+
+                    <button class="hire">Get in touch</button>
                 </div>
     
             </div>
