--- a/index.html
+++ b/index.html
@@ -66,18 +66,29 @@
                     <button class="download">Download CV</button>
                 </div>
 
-                <div class="get-intouch">
-                    <h1 class="home__title">Have a project in mind?</h1>
-                    <p class="home__subtitle">
-                        Share your vision and let's turn them into reality together.
-                    </p>
-
-                    <button class="hire">Get in touch</button>
-                </div>
+                
     
             </div>
         </div>
     </main>
+
+    <div class="get-intouch">
+        <h3 class="home__title">Have a project in mind?</h3>
+        <p class="home__subtitle">
+            Share your vision and let's turn them into reality together.
+        </p>
+
+        <button class="hire">Get in touch</button>
+    </div>
+    <div class="social-cards">
+        <h3 class="home__title">Have a project in mind?</h3>
+        <div class="scards">
+            <div class="s-card"><a href=""><i class="devicon-github-original"></i></a><p>Github</p></div>
+            <div class="s-card"><a href=""><i class="devicon-linkedin-plain"></i></a><p>Linkedin</p></div>
+            <div class="s-card"><a href=""><i class="devicon-facebook-plain"></i></a><p>Facebook</p></div>
+        </div>
+
+    </div>
 
     <footer>
         <section class="section-1">
