edited the heading

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <button class="hire">Get in touch</button>
     </div>
     <div class="social-cards">
-        <h3 class="home__title">Have a project in mind?</h3>
+        <h3 class="home__title">Social Media</h3>
         <div class="scards">
             <div class="s-card"><a href=""><i class="devicon-github-original"></i></a><p>Github</p></div>
             <div class="s-card"><a href=""><i class="devicon-linkedin-plain"></i></a><p>Linkedin</p></div>
