about me placed at center and heading added.

--- a/About Me.html
+++ b/About Me.html
@@ -56,6 +56,7 @@
           
 
           <div class="about-me-paragraph">
+            <h3>Get to know me</h3>
             <p>
               As an aspiring software developer, I am driven by a deep passion
               for technology and a commitment to delivering high-quality
