linked the pages in the navigation bar.

--- a/About Me.html
+++ b/About Me.html
@@ -44,7 +44,7 @@
           <ul class="nav-list">
             <a href="index.html"><li><h3>Home</h3></li></a>
             <a href="About Me.html"><li><h3>About Me</h3></li></a>
-            <a href="#"><li><h3>Skills</h3></li></a>
+            <a href="skills.html"><li><h3>Skills</h3></li></a>
             <a href="projects.html"><li><h3>Projects</h3></li></a>
             <a href="Contact.html"><li><h3>Contact Me</h3></li></a>
           </ul>
