--- a/projects.html
+++ b/projects.html
@@ -30,9 +30,9 @@
   </head>
   <body>
     <ul class="social-links">
-      <li><p>GitHub</p><a href="#" rel=""><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-      <li><a href="#" rel=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-      <li><a href="#" rel=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+      <li><p>GitHub</p><a href="https://github.com/rlindentsieni" rel=""><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+      <li><a href="https://linkedin.com/in/rilinde-ntsieni" rel=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+      <li><a href="https://web.facebook.com/" rel=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
     </ul>
     
     <nav class="page-nav">
