--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
     
 
     <link rel="stylesheet" href="style.css" />
-    <title>Talifhani Mulaudzi</title>
+    <title>Rilinde Ntsieni</title>
   </head>
   <body>
     <ul class="social-links">
