--- a/skills.html
+++ b/skills.html
@@ -152,35 +152,31 @@
           </div>
           <div class="experiences">
             <div class="experience">
-              <h4 class="year">2022</h4>
+              <h4 class="year">2024</h4>
               <div class="experience-description">
-                <h1>IT and Resource Manager</h1>
+                <h1>Software Development Learnership</h1>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                  modi consectetur earum quia repellat. Eaque iure rerum asperiores!
-                  Quibusdam, molestias.
+                  HTML, CSS, JavaScript, SQL and C#
                 </p>
               </div>
             </div>
             <div class="experience">
-              <h4 class="year">2021</h4>
+              <h4 class="year">2023</h4>
               <div class="experience-description">
-                <h1>IT and Resource Manager</h1>
+                <h1>Bachelor of Science (Applied Statistics and Informatics)</h1>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                  modi consectetur earum quia repellat. Eaque iure rerum asperiores!
-                  Quibusdam, molestias.
+                  Relevant Coursework: Data Analysis, Statistical Modeling,
+                  Business Intelligence, and SQL for Data Management.
                 </p>
               </div>
             </div>
             <div class="experience">
-              <h4 class="year">2021</h4>
+              <h4 class="year">2018</h4>
               <div class="experience-description">
-                <h1>IT and Resource Manager</h1>
+                <h1>National Senior Certificate</h1>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                  modi consectetur earum quia repellat. Eaque iure rerum asperiores!
-                  Quibusdam, molestias.
+                  Achieved 4 distinctions in Mathematics, Physical Sciences, 
+                  Life orientation and Tshivenda.
                 </p>
               </div>
             </div>
