--- a/About Me.html
+++ b/About Me.html
@@ -78,7 +78,7 @@
             has equipped me with the technical expertise and knowledge to
             transform ideas into reality.<br /><br />
 
-            I am always seeking new challenges and opportunities to expand my
+            <!-- I am always seeking new challenges and opportunities to expand my
             skillset and stay current with the latest industry trends and
             technologies. In my current role, I consistently demonstrate my
             ability to work effectively within a team and meet tight
@@ -87,7 +87,7 @@
             I am eager to bring my expertise and enthusiasm for software
             development to a new challenge, where I can continue to grow
             professionally and deliver exceptional results for clients and
-            employers.
+            employers. -->
         </p>
       </div>
 
