Added a certification section.

--- a/About Me.html
+++ b/About Me.html
@@ -89,7 +89,13 @@
             professionally and deliver exceptional results for clients and
             employers.
         </p>
+
+        <div class="heading">
+          <h2 class="tittle-left">My Certifications</h2>
+          <!-- <h3 class="subtittle-left">Get to know me</h3> -->
+        </div>
       </div>
+      
 
          
     </main>
