--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,9 @@
             <div class="card">
               <div>
                 <h3>Web UX-UI Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>I replicated the GirlCode application homepage,
+                   which helped enhance my CSS skills.
+                </p>
                 <ul class="languages">
                   <li>HTML</li>
                   <li>JavaScript</li>
