--- a/projects.html
+++ b/projects.html
@@ -86,8 +86,7 @@
             <div class="card">
               <div>
                 <h3>Web UX-UI Design</h3>
-                <p>I replicated the GirlCode application homepage,
-                   which helped enhance my CSS skills.
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 </p>
                 <ul class="languages">
                   <li>HTML</li>
@@ -122,7 +121,8 @@
             <div class="card">
               <div>
                 <h3>Web UX-UI Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>I replicated the GirlCode application homepage,
+                  which helped enhance my CSS skills.</p>
                 <ul class="languages">
                   <li>HTML</li>
                   <li>JavaScript</li>
