--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
             <div class="card">
               <div>
                 <h3>Web UX-UI Design</h3>
-                <p> ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <ul class="languages">
                   <li>HTML</li>
                   <li>JavaScript</li>
