--- a/projects.html
+++ b/projects.html
@@ -120,7 +120,7 @@
             </div>
             <div class="card">
               <div>
-                <h3>Web UX-UI Design</h3>
+                <h3>GirlCode Homepage Clone.</h3>
                 <p>I replicated the GirlCode application homepage,
                   which helped enhance my CSS skills.</p>
                 <ul class="languages">
